--- a/src/views/newContent/new_content.scss
+++ b/src/views/newContent/new_content.scss
@@ -1,10 +1,12 @@
+@import "../../common/styles/config";
+
 .new_content {
   h1 {
     font-size: 48px;
   }
 
   p {
-    color: blue;
+    color: $basic-green-color;
     font-size: 24px;
     text-decoration: underline;
   }
