feat:updatedのイベントを着火させる

--- a/src/views/newContent/new_content.scss
+++ b/src/views/newContent/new_content.scss
@@ -5,8 +5,9 @@
     font-size: 48px;
   }
 
-  p {
+  .text {
     color: $basic-green-color;
+    cursor: pointer;
     font-size: 24px;
     text-decoration: underline;
   }
