--- a/src/views/newContent/new_content.scss
+++ b/src/views/newContent/new_content.scss
@@ -1,14 +1,47 @@
 @import "../../common/styles/config";
 
+@mixin baseFontStyle($color: $base-font-color) {
+  color: $color;
+  font-size: 2vw;
+}
+
 .new_content {
+  margin: auto;
+  width: 50vw;
+
   h1 {
-    font-size: 48px;
+    font-size: 3vw;
+  }
+
+  .basic-text {
+    @include baseFontStyle();
   }
 
   .text {
-    color: $basic-green-color;
+    @include baseFontStyle($basic-green-color);
+
     cursor: pointer;
-    font-size: 24px;
     text-decoration: underline;
+  }
+
+  .button {
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1vw;
+    padding: 10px;
+    width: 10vw;
+  }
+
+  .array-text {
+    font-size: 1.5vw;
+
+    ul {
+      display: inline-block;
+    }
+
+    li {
+      line-height: 40px;
+      padding-left: 1rem;
+    }
   }
 }
